<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.udacity.garyshem.quizproject.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/question_1_text_view"
            style="@style/Question"
            android:text="@string/question_1_string" />
        <CheckBox
            android:id="@+id/question_1_answer_1"
            style="@style/Answer"
            android:text="@string/question_1_answer_1_string" />
        <CheckBox
            android:id="@+id/question_1_answer_2"
            style="@style/Answer"
            android:text="@string/question_1_answer_2_string" />
        <CheckBox
            android:id="@+id/question_1_answer_3"
            style="@style/Answer"
            android:text="@string/question_1_answer_3_string" />

        <TextView
            android:id="@+id/question_2_text_view"
            style="@style/Question"
            android:text="@string/question_2_string" />
        <CheckBox
            android:id="@+id/question_2_answer_1"
            style="@style/Answer"
            android:text="@string/question_2_answer_1_string" />
        <CheckBox
            android:id="@+id/question_2_answer_2"
            style="@style/Answer"
            android:text="@string/question_2_answer_2_string" />
        <CheckBox
            android:id="@+id/question_2_answer_3"
            style="@style/Answer"
            android:text="@string/question_2_answer_3_string" />
        <CheckBox
            android:id="@+id/question_2_answer_4"
            style="@style/Answer"
            android:text="@string/question_2_answer_4_string" />


        <TextView
            android:id="@+id/question_3_text_view"
            style="@style/Question"
            android:text="@string/question_3_string" />
        <RadioGroup
            android:layout_height="wrap_content"
            android:layout_width="match_parent">
            <RadioButton
                android:id="@+id/question_3_answer_1"
                style="@style/Answer"
                android:text="@string/question_3_answer_1_string"/>
            <RadioButton
                android:id="@+id/question_3_answer_2"
                style="@style/Answer"
                android:text="@string/question_3_answer_2_string"/>
            <RadioButton
                android:id="@+id/question_3_answer_3"
                style="@style/Answer"
                android:text="@string/question_3_answer_3_string"/>
        </RadioGroup>

        <TextView
            android:id="@+id/question_4_text_view"
            style="@style/Question"
            android:text="@string/question_4_string" />
        <CheckBox
            android:id="@+id/question_4_answer_1"
            style="@style/Answer"
            android:text="@string/question_4_answer_1_string" />
        <CheckBox
            android:id="@+id/question_4_answer_2"
            style="@style/Answer"
            android:text="@string/question_4_answer_2_string" />
        <CheckBox
            android:id="@+id/question_4_answer_3"
            style="@style/Answer"
            android:text="@string/question_4_answer_3_string" />
        <CheckBox
            android:id="@+id/question_4_answer_4"
            style="@style/Answer"
            android:text="@string/question_4_answer_4_string" />

        <TextView
            android:id="@+id/question_5_text_view"
            style="@style/Question"
            android:text="@string/question_5_string" />

        <EditText
            android:id="@+id/question_5_answer_edit_text"
            style="@style/Answer"
            android:hint="int, String, double"/>

        <Button
            android:id="@+id/submit_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:textSize="36sp"
            android:text="@string/submit"
            android:onClick="checkResults"/>
    </LinearLayout>
</ScrollView>
